# gb-nix-cache

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  gb-nix-cache.cabal  nova-cache.cabal
.github/actions/seed/: action.yml
.github/workflows/: ci.yml  publish.yml
exe/: Main.hs
src/GBNix/: Base32.hs  Compression.hs  Hash.hs  NAR.hs  NarInfo.hs  Signing.hs  Store.hs  StorePath.hs
src/NovaCache/: Base32.hs  Base64.hs  Compression.hs  Hash.hs  NAR.hs  NarInfo.hs  Signing.hs  Store.hs  StorePath.hs  Validate.hs
test/: CompressionTest.hs  Main.hs
